creation of category dtos and openapi
