# src/main/java/com/ulises/posverse/rest/api/dto/requests/CategoryCreationRequestDTO.java
@@ -1,0 +1,11 @@
+package com.ulises.posverse.rest.api.dto.requests;
+
+import com.ulises.posverse.common.objects.CategoryBase;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+
+@EqualsAndHashCode(callSuper = true)
+@Data
+public class CategoryCreationRequestDTO extends CategoryBase {
+}
+
